welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:1: error: not found: value ef
ef flowers(c:Color) {
^FlowerCase:1: error: not found: value c
ef flowers(c:Color) {
           ^FlowerCase:2: error: not found: value c
  setCouleurBrosse(c:Color)
                   ^FlowerCase:19: error: not found: value flowers
  flowers(Color.RED)
  ^FlowerCase:24: error: not found: value flowers
  flowers(Color.CYAN)
  ^FlowerCase:30: error: not found: value flowers
  flowers(Color.ORANGE)
  ^FlowerCase:39: error: not found: value flowers
  flowers(Color.PINK)
  ^FlowerCase:44: error: not found: value flowers
  flowers(Color.GREEN)
  ^FlowerCase:51: error: not found: value flowers
  flowers(Color.BLUE)
  ^